# branching-workshop

./: load_draw.ipynb  load_draw_fricker.ipynb  pyproject.toml  read.py  readme.md
