[tool.poetry]
name = "sthype"
version = "0.1.0"
description = ""
authors = ["coco <corentin@bisot.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.10.1"
networkx = "^3.0"
matplotlib = "^3.7.1"
numpy = "^1.24.4"
shapely = "^2.0.1"
geojson = "^3.1.0"
pytest = "^7.0.0"
pandas = "^2.3.0"
openpyxl = "^3.1.5"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"